infra/k8s/base/expiration-redis.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: expiration-redis
  labels:
    app: expiration-redis
spec:
  serviceName: expiration-redis-svc
  replicas: 1
  selector:
    matchLabels:
      app: expiration-redis
  template:
    metadata:
      labels:
        app: expiration-redis
    spec:
      containers:
        - name: expiration-redis
          image: redis:7.4-alpine3.21
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: redis-data
              mountPath: /data
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 256Mi
          readinessProbe:
            tcpSocket:
              port: 6379
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 6379
            initialDelaySeconds: 15
            periodSeconds: 20
  volumeClaimTemplates:
    - metadata:
        name: redis-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: expiration-redis-svc
  labels:
    app: expiration-redis
spec:
  clusterIP: None
  selector:
    app: expiration-redis
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
      name: redis
