infra/k8s/base/tickets-mongo.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: tickets-mongo
  labels:
    app: tickets-mongo
spec:
  serviceName: tickets-mongo-svc
  replicas: 1
  selector:
    matchLabels:
      app: tickets-mongo
  template:
    metadata:
      labels:
        app: tickets-mongo
    spec:
      containers:
        - name: tickets-mongo
          image: mongo:7.0.11-jammy
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 1Gi
          readinessProbe:
            tcpSocket:
              port: 27017
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 27017
            initialDelaySeconds: 15
            periodSeconds: 20
  volumeClaimTemplates:
    - metadata:
        name: mongo-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 5Gi
---
apiVersion: v1
kind: Service
metadata:
  name: tickets-mongo-svc
  labels:
    app: tickets-mongo
spec:
  clusterIP: None
  selector:
    app: tickets-mongo
  ports:
    - port: 27017
      targetPort: 27017
      protocol: TCP
      name: mongo
